--- a/ethabi/Cargo.toml
+++ b/ethabi/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = { version = "1", optional = true }
 uint = { version = "0.9.0", optional = true }
 regex = { version = "1.5.4", optional = true }
 once_cell = { version = "1.9.0", optional = true }
+arbitrary = { version = "1.1.3", features = ["derive"], optional = true }
 
 [dev-dependencies]
 hex-literal = "0.3"
@@ -39,6 +40,9 @@ std = [
 	"ethereum-types/std",
 	"thiserror",
 	"uint/std",
+]
+arbitrary = [
+	"dep:arbitrary"
 ]
 
 # To enable custom `Reader`/`Tokenizer` and `serde` features support
